--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <title>WhatsApp</title>
-    <link rel="icon" type="image/x-icon" href="wp.jpg">
+    <link rel="icon" type="image/x-icon" href="imgg/wp.png">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" />
     <link rel="stylesheet" href="style.css">
   </head>
